dashboard/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: omp
  labels:
    app: dashboard
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: dashboard
