dashboard/kubernetes/virtual-service.yml
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: vs-dashboard-network-rule
    namespace: omp
  spec:
    hosts:
    - dashboard
    http:
    - route:
      - destination:
          host: dashboard
      timeout: 3s
